# energy_management_fastapi

./: .gitignore  README.md  alembic.ini  generate_data.py  pyproject.toml
alembic/versions/: 48363a45d618_your_migration_message.py  5cf8a19171c5_initial_migration.py  c479f4edfd5c_initial_migration.py  ce280f7837ad_initial_migration.py
app/: database.py  main.py  models.py  schemas.py
app/routes/: auth.py  consumption.py  savings.py  users.py
